<resources>
    <string name="app_name">shoppingAccount</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="category1">Category1</string>
    <string name="category2">Category2</string>
    <string name="signout">SignOut</string>
    <string name="jetpack_example">Jetpack Example</string>
</resources>
