<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/nav_first">

    <fragment
        android:id="@+id/nav_first"
        android:name="com.example.shoppingAccount.Fragments.FirstFragment"
        android:label="@string/first"
        tools:layout="@layout/fragment_first" />
    <fragment
        android:id="@+id/nav_second"
        android:name="com.example.shoppingAccount.Fragments.SecondFragment"
        android:label="@string/second"
        tools:layout="@layout/fragment_second" />
    <fragment
        android:id="@+id/nav_third"
        android:name="com.example.shoppingAccount.Fragments.ThirdFragment"
        android:label="@string/third"
        tools:layout="@layout/fragment_third" />
    <fragment
        android:id="@+id/nav_fourth"
        android:name="com.example.shoppingAccount.Fragments.FourthFragment"
        android:label="@string/fourth"
        tools:layout="@layout/fragment_fourth" />
    <fragment
        android:id="@+id/category1"
        android:name="com.example.shoppingAccount.Fragments.category1"
        android:label="@string/category1"
        tools:layout="@layout/category1" />
    <fragment
        android:id="@+id/category2"
        android:name="com.example.shoppingAccount.Fragments.FeaturesFragment"
        android:label="@string/category2"
        tools:layout="@layout/category2" />
</navigation>